@@ -231,6 +231,9 @@
 	Fixed navigation to file in custom view in presernce of identically named
 	files there.  Thanks to filterfalse.
 
+	Fixed remapping of builtin keys that are followed by selectors (e.g.
+	`:nnoremap d y`).  Thanks to mvucBmM0.
+
 0.8-beta to 0.8
 
 	Added handling of Ctrl-L to sort dialog.  Thanks to filterfalse.
